@@ -1,0 +1,56 @@
+[interface]
+classification = functional prediction
+
+[parameters]
+;; Length of the searched motif
+$;MOTIF_LENGTH$; = 
+;; Maximum number of times the Gibbs sampler is restarted
+$;ITERATOR_NUM$; = 10
+;; Maximum number of iterations used to compute the local maximum
+$;MAX_LOOP$; = 500
+;; The number of iterations to compute the signifigance of motif
+$;ITER_SIGNIFIGANCE$; = 1000
+;; Any other command line options
+$;OTHER_OPTS$; = 
+
+[input]
+$;INPUT_FILE_LIST$; =
+$;INPUT_FILE$; =
+$;INPUT_DIRECTORY$; = 
+;; the following is only used when iterating over an INPUT_DIRECTORY
+$;INPUT_EXTENSION$; = fsa
+;;  A second multi-fasta file that is searched using the motif generated with the primary input.
+$;SEARCH_MULTI_FASTA$; = 
+
+[output]
+$;OUTPUT_TOKEN$; = default
+$;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;MOTIF_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.motif.list
+
+[component]
+$;COMPONENT_NAME$; = elph
+$;DESCRIPTION$; = none
+$;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;PIPELINE_TOKEN$; = unnamed
+
+;The version,revision,tag here is set by an interpolated CVS tag
+$;VERSION$; = $Name$
+$;RELEASE_TAG$; = $Name$
+$;REVISION$; = $Revision: 5801 $
+
+$;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
+$;ITERATOR1$; = i1
+$;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
+
+;Distributed options
+$;GROUP_COUNT$; = 150
+$;NODISTRIB$; = 0
+
+;the following keys are replaced at runtime by the invocation script
+$;COMPONENT_CONFIG$; =
+$;COMPONENT_XML$; =
+$;PIPELINE_XML$; =
+$;PIPELINEID$; =
+
+[include]
+$;PROJECT_CONFIG$;=
