@@ -1,0 +1,45 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<commandSetRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation='commandSet.xsd'>
+    <commandSet type="serial">
+		<state>incomplete</state>
+		<name>elph workflow</name>
+		<!--Preprocessing-->
+		<command>
+			<type>RunUnixCommand</type>
+			<name>create output directory</name>
+			<state>incomplete</state>
+			<executable>mkdir</executable>
+			<arg>-p -m 777 $;OUTPUT_DIRECTORY$;</arg>
+		</command>
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create temp directory</name>
+            <state>incomplete</state>
+            <executable>mkdir</executable>
+            <arg>-p -m 777 $;TMP_DIR$;</arg>
+        </command>            
+        <!--Processing-->
+        <!--Iterator-->
+        <INCLUDE file="$;DOCS_DIR$;/file_iterator_template.xml" keys="$;ITERATOR_NAME$;=ITERATOR1,$;ITERATOR_XML$;=ITERATOR1_XML"/>		
+		<!--Postprocessing-->
+		<command>
+			<type>RunUnixCommand</type>
+			<name>create motif list</name>
+			<state>incomplete</state>
+			<executable>$;BIN_DIR$;/create_list_file</executable>
+			<param>
+				<key>--directory</key>
+				<value>$;OUTPUT_DIRECTORY$;</value>
+			</param>
+			<param>
+				<key>--regex</key>
+				<value>".*\.motif"</value>
+			</param>
+			<param>
+				<key>--output_list</key>
+				<value>$;MOTIF_OUTPUT_LIST$;</value>
+			</param>
+		</command>	
+	</commandSet>
+</commandSetRoot>
