@@ -256,3 +256,10 @@ $;XDFORMAT_EXEC$;=/usr/local/common/xdformat
 
 [component celera-assembler]
 $;CELERA_ASSEMBLER_EXEC$;=/usr/local/bin/runCA
+
+[component velvet]
+$;VELVETH_EXEC$;=/usr/local/bin/velveth
+$;VELVETG_EXEC$;=/usr/local/bin/velvetg
+
+[component elph]
+$;ELPH_EXEC$;=/usr/local/bin/elph
