@@ -1,0 +1,135 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<commandSetRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation='commandSet.xsd'>
+    <commandSet type="serial">
+        <state>incomplete</state>
+        <name>velvet workflow</name>
+        <!--Preprocessing-->
+		<command>
+			<type>RunUnixCommand</type>
+			<name>create output directory</name>
+			<state>incomplete</state>
+			<executable>mkdir</executable>
+			<arg>-p -m 777 $;OUTPUT_DIRECTORY$;</arg>
+		</command>
+		<command>
+			<type>RunUnixCommand</type>
+			<name>create temp directory</name>
+			<state>incomplete</state>
+			<executable>mkdir</executable>
+    	    <arg>-p -m 777 $;TMP_DIR$;</arg>
+		</command>
+        <!--Processing-->
+        <!--Iterator-->
+        <INCLUDE file="$;DOCS_DIR$;/file_iterator_template.xml" keys="$;ITERATOR_NAME$;=ITERATOR1,$;ITERATOR_XML$;=ITERATOR1_XML"/>
+        <!--Postprocessing-->		
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create sequence list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+                <key>--regex</key>
+                <value>".*\.sequences"</value>
+            </param>
+            <param>
+                <key>--output_list</key>
+                <value>$;SEQUENCE_OUTPUT_LIST$;</value>
+            </param>
+        </command>		
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create roadmap list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+                <key>--regex</key>
+                <value>".*\.roadmaps"</value>
+            </param>
+            <param>
+                <key>--output_list</key>
+                <value>$;ROADMAP_OUTPUT_LIST$;</value>
+            </param>
+        </command>
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create contigs list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+                <key>--regex</key>
+                <value>".*\.fa"</value>
+            </param>
+            <param>
+                <key>--output_list</key>
+                <value>$;CONTIG_OUTPUT_LIST$;</value>
+            </param>
+        </command>	            	
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create stats list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+                <key>--regex</key>
+                <value>".*\.stats"</value>
+            </param>
+            <param>
+                <key>--output_list</key>
+                <value>$;STATS_OUTPUT_LIST$;</value>
+            </param>
+        </command>	
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create graph list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+                <key>--regex</key>
+                <value>".*\.graph"</value>
+            </param>
+            <param>
+                <key>--output_list</key>
+                <value>$;GRAPH_OUTPUT_LIST$;</value>
+            </param>
+        </command>	
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create amos list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+                <key>--regex</key>
+                <value>".*\.afg"</value>
+            </param>
+            <param>
+                <key>--output_list</key>
+                <value>$;AMOS_OUTPUT_LIST$;</value>
+            </param>
+        </command>
+	</commandSet>
+</commandSetRoot>
